--- a/index.html
+++ b/index.html
@@ -33,9 +33,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css"/>
+<div class="botonesaudio1-0" >
+<img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px">
+<img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg">
+</div>
+
+<div class="botonesaudio1-5">
+<img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg"height="40px" width="40px">
+<img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px">
+</div>
+
+<div class="botonesaudio2-0">
+<img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg"height="40px" width="40px">
+<img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg"height="40px" width="40px">
 
 
-
+</div>
 <div class="juventud">
  <img src="Juventud-Tentada.jpg" alt=" La Juventud Tentada por los Vicios" height="100%" width="100%">
 </div>
