--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
   <link rel="stylesheet" href="styles.css"/>
 
 <div class="botonesaudio1-0">
-<img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px">
-<img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px">
+  <div class="audio1-0vol"> <img src="volume_up_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
+  <div class="audio1-0pause"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
+  <div class="audio1-0play"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
+  <audio class="audiomujer"><source src="Voz Mujer 1.0.mp3"></audio>
+  <audio class="audio10"> <source src="Voz Hombre 1.0.mp3"> </audio>
+  <audio class="audio15"><source src="Voz hombre 1.5.mp3"></audio>
+  <audio class=" audio20"> <source src="Voz Hombre 2.0.mp3"></audio>
 </div>
 
 
