cambios audio y margenes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <div class="play" onclick="playaudio2()" type="button"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
      <div class="pausar"  onclick="pauseaudio2()" type="button"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
         <audio id="Audio1">
-        <source src="the-introvert-michael-kobrin-10959.mp3" type="Audio/mpeg">
+        <source src="Voz Neutral 1.0.mp3" type="Audio/mpeg">
         </audio>
     </div>
 
@@ -102,12 +102,9 @@
 </div>
 
 <div class="cajaopvoz" id="cajaopvoz"> 
-    
     <div class="voztitulo">
         Tipo de Voz
-        <div class="rtrvoz" id="flecharetroceso">
-        <img src="arrow_drop_up_FILL0_wght400_GRAD0_opsz48.svg" height="14px" width="14px">
-    </div>
+        <div class="rtrvoz" id="flecharetroceso"> <img src="arrow_drop_up_FILL0_wght400_GRAD0_opsz48.svg" height="14px" width="14px"> </div>
     </div>
     <div class="vozopcion1">Por Defecto</div>
     <div class="vozopcion2">Femenina</div>
