cambios de color y añadir pagina oscura

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             Claro
         </div>
         <div class="contrasteopcion2">
-            <a class="linkcontraste" href="index Oscuro .html"> Oscuro </a>
+            <a class="linkcontraste" href="index_Oscuro.html"> Oscuro </a>
         </div>
 </div>
 
