--- a/index_Oscuro.html
+++ b/index_Oscuro.html
@@ -45,12 +45,12 @@
 
 <div class="contenedordebotones"> 
     <div class="botondetexto">
-        <div class="iconotexto"> <img src="edit_FILL0_wght400_GRAD0_opsz48.svg" height="20px"  width="20px">
+        <div class="iconotexto"> <img src="edit_FILL0_wght400_OSCURO GRAD0_opsz48.svg" height="20px"  width="20px">
         </div>
         <div class="textodeboton">Texto</div>
     </div>
     <div class="botondeaudio">
-            <div class="iconodeaudio"> <img src="edit_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px">
+            <div class="iconodeaudio"> <img src="edit_FILL0_wght400_OSCURO GRAD0_opsz48.svg" height="20px" width="20px">
             </div>
             <div class="textodeaudio"> Audio</div>
     </div>
