--- a/index.html
+++ b/index.html
@@ -153,24 +153,30 @@
                Muy Grande
             </div>
 </div>
-
+<div class="botonesaudio1-0">
+  <div class="audio1-0vol"> <img src="volume_up_FILL0_wght400OSCURO_GRAD0_opsz48 - Copy.svg" height="20px" width="20px"></div>
+  <div class="audio1-0pause"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+  <div class="audio1-0play"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+  <audio class="audiomujer"><source src="Voz Mujer 1.0.mp3"></audio>
+  <audio class="audio10"> <source src="Voz Hombre 1.0.mp3"> </audio>
+  <audio class="audio15"><source src="Voz hombre 1.5.mp3"></audio>
+  <audio class=" audio20"> <source src="Voz Hombre 2.0.mp3"></audio>
+</div>
 
    <div id="datos-obra"></div>
+
+
+
 
       <div class="contenedor-up">
         <div class="iconodeubicacion"><img src="location_on_FILL0_wght400_GRAD0_opsz48.svg" height="30px" width="30px"></div>
         <div class="txt-up">Ubicación de pintura</div>
       </div>
+
 <div class="obrasSimilares">
         <div class="textoobrassimilares">
             <h2>Obras Similares</h2>
             <p> Cuadros y Esculturas que podrían Interesarte</p>
-</div>
-
-<div class="linkb">
-    <div class="linka">
-     Volver a <u>museobaburizza.cl</u>
-    </div>
 </div>
 
 <div class="carousel-wrapper">
@@ -199,9 +205,13 @@
     </div>
   </div>
 </div>
+</div>
 
-
-
+<div class="linkb">
+    <div class="linka">
+     Volver a <a href="https://museobaburizza.cl/"></u><u></a>
+    </div> 
+</div>
 
 <script>
     fetch('datosdeobra.json')
@@ -234,15 +244,7 @@
   });
 </script>
 
-<div class="botonesaudio1-0">
-  <div class="audio1-0vol"> <img src="volume_up_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
-  <div class="audio1-0pause"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
-  <div class="audio1-0play"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
-  <audio class="audiomujer"><source src="Voz Mujer 1.0.mp3"></audio>
-  <audio class="audio10"> <source src="Voz Hombre 1.0.mp3"> </audio>
-  <audio class="audio15"><source src="Voz hombre 1.5.mp3"></audio>
-  <audio class=" audio20"> <source src="Voz Hombre 2.0.mp3"></audio>
-</div>
+
 
 <div class="footer">
   <div class="texto1">Museo</div>
@@ -250,6 +252,8 @@
   <div class="texto3">Corporación   </div>
   <div class="texto4">Colección     </div>
 </div>
+
+
 <script src="Interaccion.js"> </script>
 
 </body>
