--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
      <div class="play" onclick="playaudio2()" type="button"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
      <div class="pausar"  onclick="pauseaudio2()" type="button"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
         <audio id="Audio1">
-        <source src="Voz Neutral 1.0.mp3" type="Audio/mpeg">
+        <source src="Voz Hombre 1.0.mp3" type="Audio/mpeg">
         </audio>
     </div>
 
@@ -209,7 +209,7 @@
 
 <div class="linkb">
     <div class="linka">
-     Volver a <a href="https://museobaburizza.cl/"></u><u></a>
+     Volver a <a href="https://museobaburizza.cl/"><u>museobaburizza.cl</u></a>
     </div> 
 </div>
 
