--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <h2>Obras Similares</h2>
             <p> Cuadros y Esculturas que podrían Interesarte</p>
 </div>
+</div>
 
 <div class="carousel-wrapper">
   <div class="carousel">
