--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
            
         </div>
     <div class="playpausa">
-     <div class="play" onclick="playaudio2()" type="button"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
-     <div class="pausar"  onclick="pauseaudio2()" type="button"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="40px" width="40px"></div>
+     <div class="play" onclick="playaudio2()" type="button"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="50px" width="50px"></div>
+     <div class="pausar"  onclick="pauseaudio2()" type="button"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="50px" width="50px"></div>
         <audio id="Audio1">
         <source src="Voz Hombre 1.0.mp3" type="Audio/mpeg">
         </audio>
@@ -87,15 +87,6 @@
     <div class="velocidadopcion3">x2.0</div>
 </div>
 
-<div class="cajaopvoz" id="cajaopvoz"> 
-    <div class="voztitulo">
-        Tipo de Voz
-        <div class="rtrvoz" id="flecharetroceso"> <img src="arrow_drop_up_FILL0_wght400_GRAD0_opsz48.svg" height="14px" width="14px"> </div>
-    </div>
-    <div class="vozopcion1">Por Defecto</div>
-    <div class="vozopcion2">Femenina</div>
-    <div class="vozopcion3">Masculina</div>
-</div>
 <div class="cajaoptexto"> 
         <div class="textotitulo">
             Texto
@@ -143,7 +134,6 @@
   <div class="audio1-0vol"> <img src="volume_up_FILL0_wght400OSCURO_GRAD0_opsz48 - Copy.svg" height="20px" width="20px"></div>
   <div class="audio1-0pause"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
   <div class="audio1-0play"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
-  <audio class="audiomujer"><source src="Voz Mujer 1.0.mp3"></audio>
   <audio class="audio10"> <source src="Voz Hombre 1.0.mp3"> </audio>
   <audio class="audio15"><source src="Voz hombre 1.5.mp3"></audio>
   <audio class=" audio20"> <source src="Voz Hombre 2.0.mp3"></audio>
@@ -214,8 +204,8 @@
     const datosObraDiv = document.getElementById('datos-obra');
     datosObraDiv.innerHTML = `  
     <div class="tituloObra">${titulo}</div>
+    
       <div class="datosobras">
-
         <div>Autor: <b>${autor}</b>   </div>
         <div>Colección:   <b>${coleccion}</b>  </div>
         <div> Dimensiones: <b>${dimensiones}</b>  </div>
@@ -229,6 +219,34 @@
   .catch(error => {
     console.error('Error al cargar los datos:', error);
   });
+  //tamano 2//
+  const tamanoOpcion2 = document.querySelector('.tamanoopcion2');
+
+// Agrega evento de clic al elemento
+tamanoOpcion2.addEventListener('click', cambiarTamanioTituloObra);
+
+function cambiarTamanioTituloObra() {
+  // Obtiene el elemento con la clase "tituloObra"
+  const datosobrasa = document.querySelector('.datosobras');
+
+  // Cambia el tamaño de fuente del elemento
+  datosobras.style.fontSize = '32px'; 
+}
+//tamano 3 //
+
+  const tamanoOpcion3 = document.querySelector('.tamanoopcion3');
+
+// Agrega evento de clic al elemento
+tamanoOpcion3.addEventListener('click', cambiarTamanioTituloObra);
+
+function cambiarTamanioTituloObra() {
+  // Obtiene el elemento con la clase "tituloObra"
+  const tituloObra = document.querySelector('.tituloObra');
+
+  // Cambia el tamaño de fuente del elemento
+  tituloObra.style.fontSize = '40px'; 
+}
+</script>
 </script>
 
 
