--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
 </header>
 
-<body>
+<body class="cuerpodeldocumento">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -58,7 +58,6 @@
 
 </div>
 <div class="opaudio"> 
-     
         <div class="tituloopaudio">
             Audio
             <div class="rtraudio"> <img src="arrow_drop_up_FILL0_wght400_GRAD0_opsz48.svg" height="15px" width="15px"></div>
@@ -76,7 +75,6 @@
         </div>
         
  </div>
-
 <div class="cajaopvelocidad"> 
     <div class="velocidadtitulo">
         Velocidad
@@ -85,6 +83,7 @@
     <div class="velocidadopcion1">x1.0</div>
     <div class="velocidadopcion2">x1.5</div>
     <div class="velocidadopcion3">x2.0</div>
+  
 </div>
 
 <div class="cajaoptexto"> 
@@ -109,7 +108,7 @@
             Claro
         </div>
         <div class="contrasteopcion2">
-            <a class="linkcontraste" href="index_Oscuro.html"> Oscuro </a>
+            <a class="linkcontraste" href="index Oscuro.html"> Oscuro </a>
         </div>
 </div>
 
@@ -120,20 +119,20 @@
             <img src="arrow_drop_up_FILL0_wght400_GRAD0_opsz48.svg" height="14px" width="14px">
             </div>
             </div>
-            <div class="tamanoopcion1">
+            <div class="tamanoopcion1" data-tamano="20px">
                 Por Defecto
             </div>
-            <div class="tamanoopcion2">
+            <div class="tamanoopcion2" data-tamano="22px">
                 Grande
             </div>
-            <div class="tamanoopcion3">
+            <div class="tamanoopcion3" data-tamano="34px">
                Muy Grande
             </div>
 </div>
 <div class="botonesaudio1-0">
   <div class="audio1-0vol"> <img src="volume_up_FILL0_wght400OSCURO_GRAD0_opsz48 - Copy.svg" height="20px" width="20px"></div>
-  <div class="audio1-0pause"><img src="pause_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
-  <div class="audio1-0play"><img src="play_circle_FILL0_wght400_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+  <div class="audio1-0pause"><img src="pause_circle_FILL0_wght4OSCURO00_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+  <div class="audio1-0play"><img src="play_circle_FILL0_wght400_oscuroGRAD0_opsz48.svg" height="20px" width="20px"></div>
   <audio class="audio10"> <source src="Voz Hombre 1.0.mp3"> </audio>
   <audio class="audio15"><source src="Voz hombre 1.5.mp3"></audio>
   <audio class=" audio20"> <source src="Voz Hombre 2.0.mp3"></audio>
@@ -146,7 +145,7 @@
 
       <div class="contenedor-up">
         <div class="iconodeubicacion"><img src="location_on_FILL0_wght400_GRAD0_opsz48.svg" height="30px" width="30px"></div>
-        <div class="txt-up">Ubicación de pintura</div>
+        <div class="txt-up"><a class="ubicar" href="Ubicar Pintura claro.html">Ubicación de pintura</a></div>
       </div>
 
 <div class="obrasSimilares">
@@ -160,24 +159,24 @@
   <div class="carousel">
     <div class="carousel__track">
       <div class="carousel__card">
-        <img src="antiguo_muelle_prat_-_thomas_jacques_somerscales.tif_.jpg" alt="Imagen 1" class="carousel__image">
-        <h2 class="carousel__title">Título de la Imagen 1</h2>
-        <p class="carousel__author">Autor de la Imagen 1</p>
+        <img src="antiguo_muelle_prat_-_thomas_jacques_somerscales.tif_.jpg" alt="Antiguo Muelle Prat Thomas Jacques Somerscales" class="carousel__image">
+        <h2 class="carousel__title">Antiguo Muelle Prat </h2>
+        <p class="carousel__author">Thomas Jacques Somerscales</p>
       </div>
       <div class="carousel__card">
-        <img src="panoramica_de_valparaiso_-_thomas_j._somerscales.jpg" alt="Imagen 2" class="carousel__image">
-        <h2 class="carousel__title">Título de la Imagen 2</h2>
-        <p class="carousel__author">Autor de la Imagen 2</p>
+        <img src="panoramica_de_valparaiso_-_thomas_j._somerscales.jpg" alt="Panorámica de Valparaíso Thomas Somerscales" class="carousel__image">
+        <h2 class="carousel__title">Panorámica de Valparaíso</h2>
+        <p class="carousel__author">Thomas Jacques Somerscales</p>
       </div>
       <div class="carousel__card">
-        <img src="marina_de_valparaiso_-_alberto_valenzuela_llanos.jpg" alt="Imagen 3" class="carousel__image">
-        <h2 class="carousel__title">Título de la Imagen 3</h2>
-        <p class="carousel__author">Autor de la Imagen 3</p>
+        <img src="marina_de_valparaiso_-_alberto_valenzuela_llanos.jpg" alt="Marina de Valparaíso Alberto Valenzuela Llanos" class="carousel__image">
+        <h2 class="carousel__title">Marina de Valparaíso</h2>
+        <p class="carousel__author">Alberto Valenzuela Llanos</p>
       </div>
       <div class="carousel__card">
-        <img src="panoramica_de_valparaiso_-_thomas_j._somerscales.jpg" alt="Imagen 4" class="carousel__image">
-        <h2 class="carousel__title">Título de la Imagen 4</h2>
-        <p class="carousel__author">Autor de la Imagen 4</p>
+        <img src="valparaiso_1886_-_juan_francisco_gonzalez.jpg" alt="Valparaíso Juan Francisco González" class="carousel__image">
+        <h2 class="carousel__title">Valparaíso</h2>
+        <p class="carousel__author">Juan Francisco González</p>
       </div>
     </div>
   </div>
@@ -186,9 +185,22 @@
 
 <div class="linkb">
     <div class="linka">
-     Volver a <a href="https://museobaburizza.cl/"><u>museobaburizza.cl</u></a>
+     Volver a <a href="https://museobaburizza.cl/"><u class="linkmuseo">museobaburizza.cl</u></a>
     </div> 
 </div>
+
+  <div class="icvelocidad">
+    <div class="pausavelocidad"><img src="pause_circle_FILL0_wght4OSCURO00_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+    <div class="playvelocidad"><img src="play_circle_FILL0_wght400_oscuroGRAD0_opsz48.svg" height="20px" width="20px"></div>
+  </div>
+  <div class="icvelocidad2">
+    <div class="pausavelocidad2"><img src="pause_circle_FILL0_wght4OSCURO00_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+    <div class="playvelocidad2"><img src="play_circle_FILL0_wght400_oscuroGRAD0_opsz48.svg" height="20px" width="20px"></div>
+  </div>
+  <div class="icvelocidad3">
+    <div class="pausavelocidad3"><img src="pause_circle_FILL0_wght4OSCURO00_GRAD0_opsz48.svg" height="20px" width="20px"></div>
+    <div class="playvelocidad3"><img src="play_circle_FILL0_wght400_oscuroGRAD0_opsz48.svg" height="20px" width="20px"></div>
+  </div>
 
 <script>
     fetch('datosdeobra.json')
@@ -215,37 +227,37 @@
 
      <div class= "descripcionObra">${descripcion} </div>
     `;
+    //tamano por defecto// 
+    const tamanoopcion1 = document.querySelector('.tamanoopcion1')
+    tamanoopcion1.addEventListener('click',()=>{
+      seldescripcion.style.fontSize = '20px';
+            seldatos.style.fontSize = '18px'
+          seltitulo.style.fontSize = '32px'
+    })
+
+    const tamanoopcion2 = document.querySelector('.tamanoopcion2')
+    tamanoopcion2.addEventListener('click',()=>{
+      seldescripcion.style.fontSize = '22px';
+            seldatos.style.fontSize = '20px'
+          seltitulo.style.fontSize = '36px'
+    })
+    //Tamaño muy grande//
+    const seltitulo = document.querySelector('.tituloObra');
+    const seldatos= document.querySelector('.datosobras')
+    const seldescripcion = document.querySelector('.descripcionObra');
+    const tamanoopcion3 = document.querySelector('.tamanoopcion3')
+        tamanoopcion3.addEventListener('click', function() {
+            seldescripcion.style.fontSize = '24px';
+            seldatos.style.fontSize = '20px'
+          seltitulo.style.fontSize = '40px'
+        });  
   })
   .catch(error => {
     console.error('Error al cargar los datos:', error);
   });
-  const tamanoOpcion1 = document.querySelector('.tamanoopcion1');
-        const tamanoOpcion2 = document.querySelector('.tamanoopcion2');
-        const tamanoOpcion3 = document.querySelector('.tamanoopcion3');
-
-        // Agregar evento de clic a cada elemento
-        tamanoOpcion1.addEventListener('click', cambiarTamanioTituloObra);
-        tamanoOpcion2.addEventListener('click', cambiarTamanioTituloObra);
-        tamanoOpcion3.addEventListener('click', cambiarTamanioTituloObra);
-
-        function cambiarTamanioTituloObra() {
-            // Obtener el elemento con la clase "tituloObra"
-            const tituloObra = document.querySelector('.tituloObra');
-
-            // Obtener el tamaño de fuente según la clase del elemento clicado
-            const tamanoFuente = this.classList.contains('tamanoopcion1')
-                ? '18px'
-                : this.classList.contains('tamanoopcion2')
-                    ? '22px'
-                    : '26px';
-
-            // Cambiar el tamaño de fuente del elemento
-            tituloObra.style.fontSize = tamanoFuente;
-        }
-    </script>
 
 </script>
-</script>
+
 
 
 
